--- a/PumoxBackend/PumoxBackend/appsettings.json
+++ b/PumoxBackend/PumoxBackend/appsettings.json
@@ -7,6 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "DatabaseConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Pumox;Trusted_Connection=True;"
-
+  "DatabaseConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Pumox;Trusted_Connection=True;",
+  "AppSettings": {
+    "user": "user",
+    "password":  "password"
+  }
 }
